--- a/index.html
+++ b/index.html
@@ -16,15 +16,46 @@
   <body>
     <!-- header starts -->
     <header class="heading">
-      <div class="heading-items">
-        <h1 class="heading-title">Let's Help Those Who Are More In Need</h1>
-        <p class="heading-description">
+      <div class="items heading-items">
+        <h1 class="title heading-title">
+          Let's Help Those Who Are More In Need
+        </h1>
+        <p class="description heading-description">
           Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
           falli deterruisset. No duo populo animal noluisse, enim
         </p>
-        <button class="heading-button">Donate Now</button>
+        <button class="primary-button heading-button">Donate Now</button>
       </div>
     </header>
     <!-- header ends -->
+    <!-- main starts -->
+    <main>
+      <!-- donate starts -->
+      <section class="donate">
+        <div class="items donate-items">
+          <h1 class="title donate-title">Donate Today</h1>
+          <p class="description donate-description">
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
+          </p>
+          <div class="donate-amount-buttons">
+            <button class="donate-amount-button">100tk</button
+            ><button class="donate-amount-button">200tk</button
+            ><button class="donate-amount-button">500tk</button
+            ><button class="donate-amount-button">1000tk</button
+            ><button class="donate-amount-button">5000tk</button>
+          </div>
+          <input
+            type="text"
+            name="amount"
+            id="amount"
+            placeholder="Other Amount (Taka)"
+          />
+          <button class="primary-button donate-button">Donate Now</button>
+        </div>
+      </section>
+      <!-- donate ends -->
+    </main>
+    <!-- main ends -->
   </body>
 </html>
